Closed Bug 539621 Opened 16 years ago Closed 16 years ago

nanojit: flush LogControl output on every line

Categories

(Core Graveyard :: Nanojit, defect)

x86
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: n.nethercote, Assigned: n.nethercote)

Details

(Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch patchSplinter Review
Sometimes I make a change to Nanojit which causes it to generates code that crashes. When this happens I like to look at the generated code (TMFLAGS=assembly on TraceMonkey) and compare it with the generated code from a non-crashing version. However, because LogControl prints to stdout, the output is buffered, and so when piping the output to a file sometimes part of the output is cut off because the crash occurred while the I/O buffer was partially full. This makes it harder to diagnose the bug. This patch flushes the I/O buffer after every line, thus avoiding this problem.
Attachment #421574 - Flags: review?(edwsmith)
Attachment #421574 - Flags: review?(edwsmith) → review+
Whiteboard: fixed-in-nanojit → fixed-in-nanojit, fixed-in-tracemonkey
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: