Bug 539621 - nanojit: flush LogControl output on every line.  r=edwsmith.